--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="gnb_title_02_favorites">좋아요</string>
     <string name="discount_rate">%d%%</string>
     <string name="price_format">%,d</string>
+    <string name="ordering">%,d개 구매중</string>
 </resources>
